# REGServer

./: README.md  ca_reg_srv.cfg
ca_reg_srv/: CMakeLists.txt  ca_reg_srv.pro  reg_proc.c  reg_srv.c  reg_srv.h
